sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: identifier expected but integer literal found.
	var i:Int-2=0;
                  ^