sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var i:Int-2=0;
	while(i<=getNombreValeurs()-2) {
		if (plusPetitQue(i+1,i)) echange(i,i+1)
		}
}
